[package]
name = "pumpkin-data"
version.workspace = true
edition.workspace = true
build = "build/build.rs"

[dependencies]
pumpkin-util = { path = "../pumpkin-util" }
phf = { version = "0.11.3", features = ["macros"] }

serde.workspace = true
serde_json.workspace = true

[build-dependencies]
pumpkin-util = { path = "../pumpkin-util" }

serde.workspace = true
serde_json.workspace = true

serde_json5 = "0.2.1"
heck = "0.5"
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
